--- a/client/src/assets/css/_global.css
+++ b/client/src/assets/css/_global.css
@@ -3,3 +3,19 @@
 body {
     font-family: 'Open Sans', sans-serif !important;
 }
+
+#login {
+	margin-top: 20px !important;
+	background-color: #0a195c;
+	color:white;
+}
+
+.col-md-6 {
+	margin-top: 150px !important;
+	background-color: white;
+	padding: 10px;
+}
+
+input {
+	margin-top: 10px !important;
+}
