--- a/client/src/assets/css/_global.css
+++ b/client/src/assets/css/_global.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+html {
+	overflow-x: hidden;
+}
+
 body {
     font-family: 'Open Sans', sans-serif !important;
+}
+
+*:focus {
+	outline: none;
 }
 
 #login {
@@ -10,12 +18,16 @@ body {
 	color:white;
 }
 
-.col-md-6 {
-	margin-top: 150px !important;
-	background-color: white;
-	padding: 10px;
+.blueButton {
+	padding: 0.5rem 1rem;
+	background-color: #222359;
+	color: white;
+	border: none;
 }
 
-input {
-	margin-top: 10px !important;
+.yellowButton {
+	padding: 0.5rem 1rem;
+	background-color: #C1AA74;
+	color: white;
+	border: none;
 }
