--- a/client/src/assets/css/_global.css
+++ b/client/src/assets/css/_global.css
@@ -1,34 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-html {
-	overflow-x: hidden;
-}
-
 body {
     font-family: 'Open Sans', sans-serif !important;
 }
 
-*:focus {
-	outline: none;
+#login {
+	margin-top: 20px !important;
+	background-color: #0a195c;
+	color:white;
 }
 
-.blueButton {
-	padding: 0.5rem 1rem;
-	background-color: #222359;
-	color: white;
-	border: none;
+.col-md-6 {
+	margin-top: 150px !important;
+	background-color: white;
+	padding: 10px;
 }
 
-.yellowButton {
-	padding: 0.5rem 1rem;
-	background-color: #C1AA74;
-	color: white;
-	border: none;
-	transition: 0.35s ease-in-out;
-}
-
-.yellowButton:hover {
-	padding: 0.5rem 1rem;
-	background-color: #222359;
-	color: white;
+input {
+	margin-top: 10px !important;
 }
