--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -42,3 +42,13 @@ h4 {
     padding: 2px 50px;
     border-top: 5px solid #222359;
 }
+
+.pitchCard {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(229, 229, 229, 0.3);
+    margin: 0rem 0rem 1.5rem 0;
+    padding: 1.5rem 1.5rem;
+}
