removed add styling on questions and remove components that is not in use

--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -34,6 +34,11 @@ h4 {
     font-weight: bolder;
 }
 
+h5 {
+    color: #C1AA74;
+    font-weight: bolder;
+}
+
 .heading {
     font-weight: bolder;
 }
