--- a/client/src/assets/css/profile.css
+++ b/client/src/assets/css/profile.css
@@ -48,7 +48,7 @@
     color: #818182;
     margin-top: 5%;
 }
-.proile-rating span{
+.profile-rating span{
     color: #495057;
     font-size: 15px;
     font-weight: 600;
