--- a/client/src/assets/css/_global.css
+++ b/client/src/assets/css/_global.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
-html {
-	overflow-x: hidden;
-	overflow-y: scroll;
-}
+html,body{overflow-y: scroll; }
 
 body {
 	font-family: "Open Sans", sans-serif !important;
