--- a/client/src/assets/css/_global.css
+++ b/client/src/assets/css/_global.css
@@ -5,11 +5,6 @@
 	margin: 0;
 }
 
-html,
-body {
-	overflow-y: scroll;
-}
-
 body {
 	font-family: "Open Sans", sans-serif !important;
 }
@@ -61,19 +56,16 @@ body {
 	font-weight: bold;
 	font-family: sans-serif;
 }
-<<<<<<< Updated upstream
 
-.questions-answer-box {
-	width: 500px !important;
-	height: 300px !important;
-	margin: 10px !important;
+.center-element {
+	margin: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-textarea { 
-=======
 
 textarea {
->>>>>>> Stashed changes
 	width: 400px !important;
 	height: 100px !important;
 	border: 3px solid #cccccc;
