--- a/client/src/assets/css/accordion.css
+++ b/client/src/assets/css/accordion.css
@@ -1,18 +1,26 @@
+.container-accordion {
+    margin: auto !important;
+}
+
 .accordion-section {
-    display: flex;
-    flex-direction: column;
+    display: flex !important;
+    align-items: center;
+    padding: 2rem;
 }
 
 .accordion {
     background-color: #eee;
     color: #444;
     cursor: pointer;
-    padding: 18px;
+    padding: 10px;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     border: none;
     outline: none;
     transition: background-color 0.6s ease;
+    width: 100%;
 }
 
 .accordion:hover, .active {
@@ -20,18 +28,26 @@
 }
 
 .accordion-title {
+    margin-bottom: 2px;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
+    font-size: 16px;
+}
+
+.accordion-description {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
     font-size: 14px;
 }
 
 .accordion-icon {
     margin-left: auto;
     transition: transform 0.6s ease;
+    transform: rotate(90deg);
 }
 
 .rotate {
-    transform: rotate(90deg);
+    transform: rotate(270deg);
 }
 
 .accordion-content {
@@ -45,4 +61,10 @@
     font-weight: 400;
     font-size: 14px;
     padding: 18px;
+}
+
+.accordion-block {
+    margin: 0;
+    align-items: center;
+
 }
