--- a/client/src/assets/css/_global.css
+++ b/client/src/assets/css/_global.css
@@ -70,3 +70,11 @@ body {
 	padding-left: 100px !important;
 	margin-top: 20px;
 }
+
+
+p {
+    color: black;
+    transition: ease-in-out 0.2s;
+    font-size: 16px;
+    font-weight: bold;
+}
