--- a/client/src/assets/css/authPages.css
+++ b/client/src/assets/css/authPages.css
@@ -1,10 +1,10 @@
-html {
-	overflow-y: hidden;
-}
-
 .sideImage {
 	background-image: url(../images/column-image.png);
 	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-content: center;
 }
 
 .input {
@@ -20,4 +20,10 @@ input.input:focus {
 .showhide {
 	position: absolute;
 	transform: translate(200px, 103px);
+}
+
+.about-text {
+	color: rgba(255, 255, 255, .8);
+	font-weight: 550;
+	padding: 20px;
 }
